// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It can render 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

.c2 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  text-align: left;
}

.c1 {
  max-width: 100%;
}

<button
  class="typography-linkReset-1 typography-chevron-link-2"
  data-id="chevron-button"
>
  <div
    class="c0"
    style="margin-left: -8px; margin-top: 0px; margin-bottom: 0px; height: 24px;"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root svg-icon-secondary-small-svg-icon-3"
      data-id="IconChevronRight"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
      />
    </svg>
  </div>
  <span
    class="typography-body-variant-basekick-4 typography-neutral-color-5 typography-regular-weight-6 typography-strong-support-7 c1 -span c2"
    data-id="text"
  >
    Chevron link
  </span>
</button>
`;

exports[`It can render another tone 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

.c2 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  text-align: left;
}

.c1 {
  max-width: 100%;
}

<button
  class="typography-linkReset-9 typography-chevron-link-10"
  data-id="chevron-button"
>
  <div
    class="c0"
    style="margin-left: -8px; margin-top: 0px; margin-bottom: 0px; height: 24px;"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root svg-icon-secondary-small-svg-icon-11"
      data-id="IconChevronRight"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
      />
    </svg>
  </div>
  <span
    class="typography-body-variant-basekick-12 typography-neutral-color-13 typography-regular-weight-14 typography-strong-support-15 c1 -span c2"
    data-id="text"
  >
    Chevron button
  </span>
</button>
`;
